feat(customer-domain): Developed the tests regarding the integration with customer-domain-api

--- a/pf-libs/pf-customer/pom.xml
+++ b/pf-libs/pf-customer/pom.xml
@@ -57,6 +57,13 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
         </dependency>
+
+        <!--AchUnit lib-->
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit4</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
