--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
       <!--AchUnit lib-->
       <dependency>
         <groupId>com.tngtech.archunit</groupId>
-        <artifactId>archunit</artifactId>
+        <artifactId>archunit-junit4</artifactId>
         <version>0.23.1</version>
       </dependency>
 
