feat(pf-monolith-app): created app module and doing customer broker, query model..

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <modules>
     <module>pf-libs</module>
       <module>pf-libs/pf-customer</module>
+      <module>pf-apps</module>
   </modules>
 
   <properties>
