--- a/pf-libs/pom.xml
+++ b/pf-libs/pom.xml
@@ -19,5 +19,6 @@
   <modules>
     <module>pf-core-api</module>
       <module>pf-restaurant</module>
+      <module>pf-courier</module>
   </modules>
 </project>
