wip(pf-order) created the commands for pf-order

--- a/pf-libs/pom.xml
+++ b/pf-libs/pom.xml
@@ -20,5 +20,6 @@
     <module>pf-core-api</module>
       <module>pf-restaurant</module>
       <module>pf-courier</module>
+      <module>pf-order</module>
   </modules>
 </project>
